# master-thesis

./: .gitignore  1_clique.ipynb  3_stat-normality.ipynb  4_stat-distance-between-means.ipynb  5_classification.ipynb  6_hist_viz.ipynb  clique.ipynb  pyproject.toml  stat-distance-between-means.ipynb  stat-normality.ipynb
